--- a/elements/buttons.html
+++ b/elements/buttons.html
@@ -200,9 +200,8 @@ title: Buttons | Livefyre Bootstrap
       </div>
 
       <div class="collapse" id="buttons-fycons-react">
-        {% highlight html %}// Put the font name in the "ico" attribute, leaving out the "fycon-" part of the class name.
-var Button = require('react-bootstrap').Button;
-var Fycon = require('../Fycon'); // Custom LF component
+        {% highlight html %}var Button = require('react-bootstrap').Button;
+var Fycon = require('../Fycon'); // Custom LF component - Put the font name in the "ico" attribute, leaving out the "fycon-" part of the class name.
 
 <Button><Fycon ico="action-like" size="xs" /> Extra Small</Button>
 <Button><Fycon ico="action-like" size="sm" /> Small</Button>
