--- a/fycons.html
+++ b/fycons.html
@@ -4,7 +4,7 @@
     <title>Livefyre Bootstrap Developer Docs</title>
     <!-- <link href="../../dist/all.css" rel="stylesheet"> -->
     <!-- Use 1.x for the button example and 2.x for the add-plus example. -->
-    <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v1.4.18/livefyre-bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v1.4.19/livefyre-bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.livefyre.com/libs/livefyre-bootstrap/v2.0.2/livefyre-bootstrap.min.css">
 
     <link rel="stylesheet" href="styles/docs.css">
@@ -927,6 +927,10 @@
         <li>
           <span class="fycon-source-vine" aria-hidden="true"></span>
           <input type="text" readonly="readonly" value="source-vine">
+        </li>
+        <li>
+          <span class="fycon-source-weibo" aria-hidden="true"></span>
+          <input type="text" readonly="readonly" value="source-weibo">
         </li>
         <li>
           <span class="fycon-source-wordpress" aria-hidden="true"></span>
