Update demo files.

--- a/demos/kitchensink/bootswatch.html
+++ b/demos/kitchensink/bootswatch.html
@@ -593,6 +593,7 @@
             </div>
     
             <div class="bs-component">
+              <!--
               <label class="toggle toggle-label">
                   <input type="checkbox" role="checkbox" />
                   <span data-off="Off">On</span>
@@ -607,9 +608,14 @@
                   <input type="checkbox" role="checkbox" />
                   <span data-off="Off">On</span>
               </label>
-              
+              -->
               <label class="toggle toggle-sm">
                   <input type="checkbox" role="checkbox" />
+                  <span></span>
+              </label>
+
+              <label class="toggle toggle-sm">
+                  <input type="checkbox" role="checkbox" disabled />
                   <span></span>
               </label>
           </div>
